fix html issue too much section tag that makes selectors dont work

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ main section:nth-of-type(2) {
     margin-bottom: 4.8rem;
 }
 
-main section:nth-of-type(2) h2 {
+main section:nth-of-type(1) h2 {
     font-size: 2.4rem;
     font-weight: 600;
 }
@@ -232,14 +232,14 @@ div:nth-of-type(3) div span {
     color: var(--blue);
 }
 
-main>section:nth-of-type(2) article {
+.bmi-value {
     background-color: var(--blue);
     color: var(--white);
     padding: 3.2rem;
     border-radius: 1rem;
 }
 
-main>section:nth-of-type(2) article h2 {
+.bmi-value h2 {
     font-size: 1.6rem;
     font-weight: 400;
 }
